--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
 		"start": "next start",
 		"lint": "eslint",
 		"format": "prettier --write .",
-		"format:check": "prettier --check ."
+		"format:check": "prettier --check .",
+		"registry:build": "shadcn build"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.541.0",
 		"next": "15.5.0",
 		"react": "19.1.1",
-		"react-dom": "19.1.1"
+		"react-dom": "19.1.1",
+		"shadcn": "^2.10.0",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.3.1",
@@ -27,6 +34,7 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"tailwindcss": "^4.1.12",
+		"tw-animate-css": "^1.3.7",
 		"typescript": "^5.9.2"
 	}
 }
