--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 		"registry:build": "shadcn build"
 	},
 	"dependencies": {
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-slot": "^1.2.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.541.0",
 		"next": "15.5.0",
+		"next-themes": "^0.4.6",
 		"react": "19.1.1",
 		"react-dom": "19.1.1",
 		"shadcn": "^2.10.0",
