--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-progress": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@xstate/react": "^6.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.541.0",
@@ -22,14 +24,15 @@
 		"react": "19.1.1",
 		"react-dom": "19.1.1",
 		"shadcn": "^2.10.0",
-		"tailwind-merge": "^3.3.1"
+		"tailwind-merge": "^3.3.1",
+		"xstate": "^5.20.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.3.1",
 		"@tailwindcss/postcss": "^4.1.12",
 		"@types/node": "^24.3.0",
 		"@types/react": "^19.1.11",
-		"@types/react-dom": "^19.1.7",
+		"@types/react-dom": "^19.1.8",
 		"eslint": "^9.34.0",
 		"eslint-config-next": "15.5.0",
 		"eslint-config-prettier": "^10.1.8",
