--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-progress": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tabs": "^1.1.13",
 		"@xstate/react": "^6.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"hast-util-to-jsx-runtime": "^2.3.6",
 		"lucide-react": "^0.541.0",
 		"next": "15.5.0",
 		"next-themes": "^0.4.6",
@@ -38,6 +40,7 @@
 		"eslint-config-prettier": "^10.1.8",
 		"prettier": "^3.6.2",
 		"prettier-plugin-tailwindcss": "^0.6.14",
+		"shiki": "^3.12.0",
 		"tailwindcss": "^4.1.12",
 		"tw-animate-css": "^1.3.7",
 		"typescript": "^5.9.2"
