--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"build": "next build --turbopack",
 		"start": "next start",
 		"lint": "eslint",
+		"cypress:open": "cypress open --component",
+		"cypress:run": "cypress run --component",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"registry:build": "shadcn build"
@@ -35,6 +37,7 @@
 		"@types/node": "^24.3.0",
 		"@types/react": "^19.1.11",
 		"@types/react-dom": "^19.1.8",
+		"cypress": "^15.1.0",
 		"eslint": "^9.34.0",
 		"eslint-config-next": "15.5.0",
 		"eslint-config-prettier": "^10.1.8",
