--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "next.js-template",
-	"version": "0.1.0",
+	"name": "stateful-button-react",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
@@ -22,31 +22,31 @@
 		"@xstate/react": "^6.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.541.0",
+		"lucide-react": "^0.542.0",
 		"motion": "^12.23.12",
-		"next": "15.5.0",
+		"next": "15.5.2",
 		"next-themes": "^0.4.6",
 		"react": "19.1.1",
 		"react-dom": "19.1.1",
-		"shadcn": "^2.10.0",
+		"shadcn": "3.2.1",
 		"tailwind-merge": "^3.3.1",
-		"xstate": "^5.20.2"
+		"xstate": "^5.21.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.3.1",
-		"@tailwindcss/postcss": "^4.1.12",
-		"@types/node": "^24.3.0",
-		"@types/react": "^19.1.11",
-		"@types/react-dom": "^19.1.8",
+		"@tailwindcss/postcss": "^4.1.13",
+		"@types/node": "^24.3.1",
+		"@types/react": "^19.1.12",
+		"@types/react-dom": "^19.1.9",
 		"cypress": "^15.1.0",
 		"eslint": "^9.34.0",
-		"eslint-config-next": "15.5.0",
+		"eslint-config-next": "15.5.2",
 		"eslint-config-prettier": "^10.1.8",
 		"prettier": "^3.6.2",
 		"prettier-plugin-tailwindcss": "^0.6.14",
-		"shiki": "^3.12.0",
-		"tailwindcss": "^4.1.12",
-		"tw-animate-css": "^1.3.7",
+		"shiki": "^3.12.2",
+		"tailwindcss": "^4.1.13",
+		"tw-animate-css": "^1.3.8",
 		"typescript": "^5.9.2"
 	}
 }
